[package]
name = "transmute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
log = "0.4"
glob = "0.3"
env_logger = "0.8.4"
serde_json = "1.0"
regex = "1.5"
random-string = "1.0"
rand = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1.1"