[package]
name = "transmute"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
log = "0.4"
glob = "0.3"
env_logger = "0.8.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.5"
random-string = "1.0"
rand = "0.8"
tera = "1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1.1"